public/styles/stylus/main.styl
*
  font-family: 'Play', sans-serif;
body
  background #777
  color lightblue

h1
  font-size 32px

input
  color #555

input:focus
  outline 0

button:focus
  outline 0

a:hover
  text-decoration none
  color inherit

.main-container
  @media screen and (max-width: 770px)
    width 100%
    padding 0

.read-me
  background tomato
  color #fff
  position relative
  top -1px
  padding 5px
  border-radius 0 0 10px 10px
  @media screen and (max-width: 770px)
    width 100%
    border-radius 0
    height 53px
    font-size 1.5em

.read-me:hover
  background #777
  color tomato
  border 1px solid tomato

.back
  background tomato
  color #fff
  padding 5px
  border-radius 5px
  position relative
  top -5px
  right 16px
  @media screen and (max-width: 770px)
    border-radius 0
    top -24px
    left 73%
    padding 32px

.back:hover
  background #fff
  color tomato
  border 1px solid tomato

.info-div
  background #fff
  color #777
  width 60%
  border-radius 0 0 10px 10px
  overflow scroll
  @media screen and (max-width: 770px)
    width 90%
    position relative
    top 30px
    border-radius 0

.entry-input
  background #fff
  border none
  border-radius 5px 0 0 5px
  color #777
  height 32px
  padding-left 10px
  font-size 1.2em
  @media screen and (max-width: 770px)
    border-radius 0
    font-size 1.5em
    height 42px

.entry-group
  width 100%

.wee-form
  @media screen and (min-width: 770px)
    display none
.big-form
  @media screen and (max-width: 770px)
    display none
.entries-container
  @media screen and (max-width: 770px)
    padding 0
    position relative
    left 4%

.submit-button
  background lightblue
  border none
  border-radius 0 5px 5px 0
  border-left 1px solid #777
  font-size 15px
  color #777
  display inline-block
  height 32px
  position relative
  padding 5px
  @media screen and (max-width: 770px)
    border-radius 0
    height 42px
    font-size 1.5em
    overflow hidden

.submit-button:hover
  background #777
  color lightblue
  border 1px solid lightblue
  box-sizing border-box
  top 0px
  margin-bottom 1px

.submit-button:active
  top 1px

.reset
  border none
  background tomato
  color #fff
  border-radius 8px
  margin-left 12px
  font-size 0.5em
  @media screen and (max-width: 770px)
    border-radius 0
    margin-left 36%
    font-size 0.7em
    padding 15px

.reset:hover
  background #777
  color tomato
  border 1px solid tomato
  margin-bottom -2px

.list-header
  @media screen and (max-width: 770px)
    border-bottom 1px solid #555

.entry
  background white
  color #555
  font-size 1.2em
  overflow scroll
  display inline-block
  padding 2px 10px
  height 30px
  margin-top 15px
  border-radius 10px
  @media screen and (max-width: 770px)
    font-size 1.6em
    height 40px
    margin-top 2px
    border-radius 0
    width 89%

.entry:hover
  color #555

input[type=checkbox]
  display none

.delete-item
  color tomato
  font-size 27px
  display inline-block
  border none
  border-radius 6px
  width 30px
  height 30px
  padding 2px
  margin-left 4px
  top -1px
  transition-property transform
  transition-duration 0.4s
  @media screen and (max-width: 770px)
    font-size 38px

.delete-item:hover
  cursor pointer
  color #FF4A1DFF
  transform rotateY(180deg)

.delete-item:active
  top 1px

.choose
  background tomato
  color #fff
  margin-top 15px
  @media screen and (max-width: 770px)
    margin-top 0
    height 49px
    font-size 1.6em
    border-radius 0

.choose:hover
  background #777
  color tomato
  border 1px solid tomato

.choose:focus
  outline 0
  color tomato

.choice-title
  @media screen and (max-width: 770px)
    border-bottom 1px solid #555

.the-choice
  background white
  color #555
  border-radius 10px
  width 60%
  @media screen and (max-width: 770px)
    border-radius 0
    width 100%

.active-false
  text-decoration line-through
  background tomato
  color white

.dropdown-menu
  top: -19px
  border-radius 10px
  border none
  padding-left 7px
  font-size 1.2em
  width 100%
  @media screen and (max-width: 770px)
    top -30px
    border-radius 0
    font-size 1.6em
    background #FFB9A1FF

